2010-08-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* fileio/Makefile.am: Remove AM_CONDITIONAL(LIBCHIP).
	* configure.ac: Remove AM_CONDITIONAL(LIBCHIP).
	Force autoconf-2.67, automake-1.11.1.

2010-07-07	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* minimum/init.c: Use fatal error extension to prevent infinite
	runtime.

2010-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* capture/capture.doc: Remove more ITRON references.

2010-06-02 	Chris Johns <chrisj@rtems.org>

	* iostream/init.cc: Remove the hack.

2010-06-02 	Chris Johns <chrisj@rtems.org>

	* fileio/init.c: Update to new mount API.
	* iostream/init.cc: Hack to work around confdefs.h in C++.
	* iostream/system.h: Add comment about base miniIMFS.

2010-04-04	Ralf Corsépius <ralf.corsepius@rtems.org>

	* capture/init.c: Remove unused variable "out".

2010-03-29	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* capture/init.c, capture/test1.c, paramoia/init.c,
	paranoia/paranoia.c: exclude tests for SMALL MEMORY targets

2010-03-12	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* fileio/init.c: Remove deprecation warnings.

2010-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: Fix warnings for ctype methods.

2009-11-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* loopback/init.c: Adjust return-type of rtems_bsdnet_loopattach to
	int to match with rtems/rtems_bsdnet.h.

2009-10-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_mp/apptask.c: Use PRIxrtems_id to print rtems_ids.
	Include "tmacros.h".
	* base_mp/node1/Makefile.am, base_mp/node2/Makefile.am:
	Add -I$(top_srcdir)/../support/include.

2009-10-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* pppd/netconfig.h: Add UL suffix to long constants to avoid
	implicit integer overflows on 16bit targets.
	* fileio/init.c: Use %zd to print ssize_t.

2009-10-27	Ralf Corsépius <ralf.corsepius@rtems.org>

	* base_sp/apptask.c, unlimited/init.c:
	Use PRIdrtems_task_argument to print rtems_task_argument's.
